perf:【IoT 物联网】场景联动优化 review 提到的逻辑